[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
categories = ["command-line-utilities"]
description = "Generates a BitBake recipe for a package utilizing meta-rust's classes."
documentation = "https://github.com/cardoe/cargo-bitbake"
homepage = "https://github.com/cardoe/cargo-bitbake"
keywords = ["cargo-subcommand", "bitbake", "yocto", "recipe"]
license = "MIT/Apache-2.0"
edition = "2018"
name = "cargo-bitbake"
readme = "README.md"
repository = "https://github.com/cardoe/cargo-bitbake"
version = "0.3.16-alpha.0"
rust-version = "1.89"

[badges]
is-it-maintained-issue-resolution = { repository = "cardoe/cargo-bitbake" }
is-it-maintained-open-issues = { repository = "cardoe/cargo-bitbake" }
maintenance = { status = "passively-maintained" }

[badges.travis-ci]
repository = "cardoe/cargo-bitbake"

[dependencies]
anyhow = "1.0.99"
cargo = "0.90.0"
git2 = "0.20.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
md5 = "0.8.0"
regex = "1.11.2"
structopt = "0.3.26"
