[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
categories = ["command-line-utilities"]
description = "Generates a BitBake recipe for a package utilizing meta-rust's classes."
documentation = "https://github.com/meta-rust/cargo-bitbake"
homepage = "https://github.com/meta-rust/cargo-bitbake"
keywords = ["cargo-subcommand", "bitbake", "yocto", "recipe"]
license = "MIT/Apache-2.0"
edition = "2024"
name = "cargo-bitbake"
readme = "README.md"
repository = "https://github.com/meta-rust/cargo-bitbake"
version = "0.3.16-alpha.0"
rust-version = "1.86"

[badges]
is-it-maintained-issue-resolution = { repository = "meta-rust/cargo-bitbake" }
is-it-maintained-open-issues = { repository = "meta-rust/cargo-bitbake" }
maintenance = { status = "passively-maintained" }

[badges.travis-ci]
repository = "meta-rust/cargo-bitbake"

[dependencies]
anyhow = "^1.0"
cargo = "^0.89"
git2 = "^0.20"
itertools = "^0.14"
lazy_static = "^1"
md5 = "^0.8"
regex = "^1"
structopt = "^0.3"
